helm-chart/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
      name: frontal
  selector:
    app: jellyfin
